<resources>
    <!-- Application Name -->
    <string name="app_name">File Sharing</string>

    <!-- Broadcast Fragment Strings -->
    <string name="broadcast_fragment">Receive Files</string>
    <string name="broadcast_button_start">Start</string>
    <string name="broadcast_button_stop">Stop</string>
    <string name="broadcast_no_internet_message">Please enable the internet in order to be available\nto the sender and receive files</string>
    <string name="broadcast_message_on">Your device is ready to receive files\nDon\'t close the app otherwise the receive will stop</string>
    <string name="broadcast_message_off">Please hit the start button to start receiving files</string>
    <string name="broadcast_imported_files">Imported Files</string>

    <!-- Receive Fragment Strings -->
    <string name="receive_fragment">Receive Request</string>
    <string name="receive_connect_title">Request Sending File</string>
    <string name="receive_connect_message">%s  would like to share a %s file</string>
    <string name="receive_failed_title">Something Went Wrong!</string>
    <string name="receive_failed_message">Receiving files has been stopped</string>
    <string name="receive_progress_title">Receiving File…</string>
    <string name="receive_progress_message">Please wait for %s file to be transferred</string>
    <string name="receive_complete_title">File Received</string>
    <string name="receive_complete_message">%s file has been received successfully</string>
    <string name="receive_positive_dismiss">Dismiss</string>
    <string name="receive_positive_accept">Accept</string>
    <string name="receive_negative_refuse">Refuse</string>

    <!-- Scan Fragment Strings -->
    <string name="scan_fragment">Receivers Scan</string>
    <string name="scan_no_receivers_header">No Receivers Found</string>
    <string name="scan_no_receivers_message">Please make sure both the receiver and sender\nin the same network</string>
    <string name="scan_no_internet_message">Please enable the internet to start scanning for receivers</string>
    <string name="scan_rescan">Rescan</string>

    <!-- Send Fragment Strings -->
    <string name="send_fragment">Send File</string>
    <string name="send_started_title">Request Sent</string>
    <string name="send_started_message">Request sending file has been sent the receiver and waiting for the approval</string>
    <string name="send_failed_title">Something Went Wrong!</string>
    <string name="send_failed_message">The receiver requested is no longer available, Please rescan for receivers</string>
    <string name="send_refused_title">Receiver Denied</string>
    <string name="send_refused_message">The receiver has refused your sending file request</string>
    <string name="send_idle">"Are you sure you want to send this file to %s?"</string>
    <string name="send_progress_title">Sending File…</string>
    <string name="send_progress_message">Please wait for %s file to be transferred</string>
    <string name="send_completed_title">File Sent</string>
    <string name="send_completed_message">%s file has been sent successfully</string>
    <string name="send_positive_send">Send</string>
    <string name="send_positive_dismiss">Dismiss</string>

    <!-- Name Fragment Strings -->
    <string name="name_fragment">Username</string>
    <string name="name_title">Enter Your Name</string>
    <string name="name_message">Please write your name in order to send and receive files with others</string>
    <string name="name_hint">Name</string>
    <string name="name_error_empty">Name must not be empty</string>
    <string name="name_error_max">"Maximum name length is 20 letter"</string>
    <string name="name_note">NOTE: this name can be changed later at any time</string>
    <string name="name_confirm">Confirm</string>

    <!-- Imported Files Fragment Strings -->
    <string name="imported_fragment">Imported Files</string>
    <string name="imported_empty_header">No Imported Files</string>
    <string name="imported_rename_title">Rename File</string>
    <string name="imported_delete_title">Delete File</string>
    <string name="imported_delete_message">Are you sure you want to delete %s file</string>
    <string name="imported_rename_file">Rename</string>
    <string name="imported_delete_file">Delete</string>

    <!-- Common Strings -->
    <string name="no_internet_header">No Internet Connection</string>
    <string name="negative_cancel">Cancel</string>
</resources>
