<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment"
    tools:ignore="contentDescription">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/sender_menu"
        app:navigationIcon="@drawable/icon_back_arrow"
        app:title="@string/scan_fragment"
        app:titleCentered="true" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/pink"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        app:shimmer_auto_start="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/sender_user_shimmer_item" />

            <include layout="@layout/sender_user_shimmer_item" />

            <include layout="@layout/sender_user_shimmer_item" />

            <include layout="@layout/sender_user_shimmer_item" />

            <include layout="@layout/sender_user_shimmer_item" />

            <include layout="@layout/sender_user_shimmer_item" />

            <include layout="@layout/sender_user_shimmer_item" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        tools:listitem="@layout/sender_user_item" />

    <ImageView
        android:id="@+id/empty_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/icon_no_tethers"
        app:layout_constraintBottom_toTopOf="@+id/empty_header"
        app:layout_constraintEnd_toEndOf="@+id/empty_header"
        app:layout_constraintStart_toStartOf="@+id/empty_header"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/empty_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_no_receivers_header"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scan_no_receivers_message"
        app:layout_constraintEnd_toEndOf="@+id/empty_header"
        app:layout_constraintStart_toStartOf="@+id/empty_header"
        app:layout_constraintTop_toBottomOf="@+id/empty_header" />

    <ImageView
        android:id="@+id/internet_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/icon_wifi_off"
        app:layout_constraintBottom_toTopOf="@+id/internet_header"
        app:layout_constraintEnd_toEndOf="@+id/internet_header"
        app:layout_constraintStart_toStartOf="@+id/internet_header"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/internet_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_header"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/internet_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scan_no_internet_message"
        app:layout_constraintEnd_toEndOf="@+id/internet_header"
        app:layout_constraintStart_toStartOf="@+id/internet_header"
        app:layout_constraintTop_toBottomOf="@+id/internet_header" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/scanning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="shimmer, progress" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="recycler" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="empty_icon, empty_header, empty_message" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="internet_icon, internet_header, internet_message" />

</androidx.constraintlayout.widget.ConstraintLayout>